# bazel-gen-source-bug

a/: BUILD.bazel  source1.cxx
b/: BUILD.bazel  file1.cxx
